added: car info on search page

--- a/frontend/styles/searchController.css
+++ b/frontend/styles/searchController.css
@@ -1,11 +1,3 @@
-.car1{
-    margin-left: 15%;
+.carInfo{
+    cursor: pointer;
 }
-.car2{
-    margin-left: 45%;
-}
-.car3{
-    margin-left: 40%;
-}
-.car4{}
-.car5{}
