--- a/frontend/styles/searchController.css
+++ b/frontend/styles/searchController.css
@@ -1,3 +1,9 @@
 .carInfo{
     cursor: pointer;
 }
+
+.carImagesLayout{
+    margin-left: auto;
+    margin-right: auto;
+    text-align: center;
+}
