--- a/frontend/styles/searchView.css
+++ b/frontend/styles/searchView.css
@@ -5,7 +5,7 @@
 }
 
 .sTextField{
-    width: 1200px;
+    width: 1000px;
 }
 
 .firstHorizontalLayout{
@@ -16,6 +16,7 @@
 
 .image{
     cursor: pointer;
+    margin-top: -2%;
 }
 
 .searchLayout{
@@ -24,6 +25,7 @@
 }
 
 .imagesLayout{
+    margin-top: 2%;
     margin-left: auto;
     margin-right: auto;
 }
