--- a/frontend/styles/markView.css
+++ b/frontend/styles/markView.css
@@ -1,10 +1,21 @@
 .labelLayout{
     margin-left: auto;
     margin-right: auto;
-    margin-top: 10%;
+    margin-top: auto;
 }
 
 .infoLayout{
+    margin-left: auto;
+    margin-right: auto;
+}
+
+.allCarsButton{
+    background-color: #606060;
+    border-radius: 8px;
+    color: antiquewhite;
+}
+
+.buttonHl{
     margin-left: auto;
     margin-right: auto;
 }
