--- a/frontend/styles/searchView.css
+++ b/frontend/styles/searchView.css
@@ -1,7 +1,10 @@
 .sButton{
-    background-color: #606060;
     width: 100px;
-    color: antiquewhite;
+}
+
+.sButton:hover{
+    transition: 0.3s;
+    background-color: #11d7d7;
 }
 
 .sTextField{
@@ -18,6 +21,12 @@
     cursor: pointer;
     margin-top: -2%;
 }
+
+.image:hover{
+    opacity: 0.7;
+    transition: 0.5s;
+}
+
 
 .searchLayout{
     margin-left: auto;
